--- a/2025/sst/package.json
+++ b/2025/sst/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build",
+    "build": "slidev build --base /2025/sst/ --out ../../dist/2025/sst",
     "dev": "slidev --open",
     "export": "slidev export"
   }
